--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "contributors" [
+  "contributors": [
     "Robin Pokorny <me@robinpokorny.com> (http://robinpokorny.com)",
     "Martin Kristof (https://github.com/MartinKristof)"
   ]
