Add koa compose

--- a/packages/css-should/package.json
+++ b/packages/css-should/package.json
@@ -10,6 +10,7 @@
   "author": "Robin Pokorny <me@robinpokorny.com> (http://robinpokorny.com)",
   "license": "MIT",
   "dependencies": {
-    "css": "^2.2.1"
+    "css": "^2.2.1",
+    "koa-compose": "^2.4.0"
   }
 }
