--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
   "license": "MIT",
   "name": "css-should",
   "scripts": {
-    "test": "standard"
+    "test": "standard && mocha"
   },
   "author": "Robin Pokorny <me@robinpokorny.com> (http://robinpokorny.com)",
   "contributors": [
     "Martin Kristof (https://github.com/MartinKristof)"
   ],
   "devDependencies": {
-    "standard": "^6.0.8",
-    "lerna": "^1.1.2"
+    "babel-cli": "^6.7.7",
+    "babel-core": "^6.7.7",
+    "babel-preset-es2015": "^6.6.0",
+    "chai": "^3.5.0",
+    "lerna": "^1.1.2",
+    "mocha": "^2.4.5",
+    "standard": "^6.0.8"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
