--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "license": "MIT",
   "name": "css-should",
   "scripts": {
-    "test": "standard && mocha"
+    "compile": "lerna run compile",
+    "test": "standard && npm run compile && mocha"
   },
   "author": "Robin Pokorny <me@robinpokorny.com> (http://robinpokorny.com)",
   "contributors": [
@@ -14,7 +15,7 @@
     "babel-core": "^6.7.7",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
-    "lerna": "^1.1.2",
+    "lerna": "2.0.0-beta.6",
     "mocha": "^2.4.5",
     "standard": "^6.0.8"
   },
