--- a/packages/css-should/package.json
+++ b/packages/css-should/package.json
@@ -5,8 +5,9 @@
   "main": "lib/index.js",
   "repository": "https://github.com/robinpokorny/css-should/tree/master/packages/css-should",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "babel src -d lib"
+    "compile": "babel src -d lib",
+    "prepublish": "npm run compile",
+    "test": "echo \"Error: run test in repo root\" && exit 1"
   },
   "author": "Robin Pokorny <me@robinpokorny.com> (http://robinpokorny.com)",
   "license": "MIT",
