--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^6.7.7",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "lerna": "2.0.0-beta.6",
     "mocha": "^2.4.5",
     "standard": "^6.0.8"
