--- a/packages/css-should-plugin-match/package.json
+++ b/packages/css-should-plugin-match/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "css-should",
+  "name": "css-should-plugin-match",
   "version": "0.3.0",
   "description": "Define semantics of CSS classnames vocabulary",
   "main": "lib/index.js",
-  "repository": "https://github.com/robinpokorny/css-should/tree/master/packages/css-should",
+  "repository": "https://github.com/robinpokorny/css-should/tree/master/packages/css-should-match",
   "scripts": {
     "compile": "babel src -d lib",
     "prepublish": "npm run compile",
@@ -11,11 +11,7 @@
   },
   "author": "Robin Pokorny <me@robinpokorny.com> (http://robinpokorny.com)",
   "license": "MIT",
-  "dependencies": {
-    "css": "^2.2.1",
-    "koa-compose": "^3.1.0",
-    "css-should-plugin-match": "^0.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "*"
   }
